--- a/index.html
+++ b/index.html
@@ -49,12 +49,6 @@
         box-shadow: 0 0 10px rgba(0,0,0,0.05);
     }
 
-    /* 🔥 SECTION MODALITÉS EN VERT */
-    #modalites {
-        background-color: #c8f7c5 !important;
-        border-left: 5px solid #1f8f4a;
-    }
-
     table {
         width: 100%;
         border-collapse: collapse;
@@ -72,6 +66,14 @@
         color: white;
     }
 
+    footer {
+        background-color: #146b36;
+        color: white;
+        text-align: center;
+        padding: 15px;
+        margin-top: 30px;
+    }
+
     input, select {
         width: 100%;
         padding: 10px;
@@ -87,14 +89,6 @@
         width: 100%;
         border-radius: 5px;
         font-size: 16px;
-    }
-
-    footer {
-        background-color: #146b36;
-        color: white;
-        text-align: center;
-        padding: 15px;
-        margin-top: 30px;
     }
 </style>
 </head>
@@ -117,150 +111,128 @@
 </nav>
 
 <div class="container" id="accueil">
-    <!-- Reste du contenu (inchangé) -->
 
-    <div class="box" id="modalites">
+    <div class="box">
+        <h2>Bienvenue</h2>
+        <p>
+            Bienvenue chez <strong>Crédit d’Afrik & Investissement</strong>, votre partenaire
+            pour le financement et la croissance de vos projets en Afrique.
+        </p>
+
+        <h3>Notre histoire</h3>
+        <p>
+            Le crédit en ligne a profondément transformé la manière dont les particuliers et les entreprises
+            accèdent au financement. Grâce à l’évolution des technologies, il est devenu possible d’obtenir un prêt
+            rapidement, sans se déplacer, et en toute sécurité. Cette facilité d’accès permet aujourd’hui à des milliers
+            de personnes de financer leurs projets avec simplicité.
+        </p>
+
+        <p>
+            C’est dans cette dynamique moderne que <strong>Crédit d’Afrik & Investissement</strong> a vu le jour en 
+            <strong>2020</strong>. Depuis sa création, notre plateforme fonctionne à 
+            <strong>100 % en ligne</strong>, offrant une solution innovante, rapide et accessible à tous,
+            quel que soit l’endroit où vous vous trouvez en Afrique.
+        </p>
+    </div>
+
+    <div class="box" id="services">
+        <h2>Nos Services</h2>
+
+        <h3>Crédit Personnel</h3>
+        <table>
+            <tr>
+                <th>Montant</th>
+                <th>Durée</th>
+                <th>Taux d’intérêt</th>
+                <th>Total à rembourser</th>
+            </tr>
+            <tr><td>50.000 FCFA</td><td>3 mois</td><td>11.000 FCFA</td><td>61.000 FCFA</td></tr>
+            <tr><td>100.000 FCFA</td><td>4 mois</td><td>21.000 FCFA</td><td>121.000 FCFA</td></tr>
+            <tr><td>250.000 FCFA</td><td>6 mois</td><td>39.000 FCFA</td><td>289.000 FCFA</td></tr>
+            <tr><td>500.000 FCFA</td><td>8 mois</td><td>60.000 FCFA</td><td>560.000 FCFA</td></tr>
+            <tr><td>1.000.000 FCFA</td><td>12 mois</td><td>90.000 FCFA</td><td>1.090.000 FCFA</td></tr>
+        </table>
+
+        <h3>Crédit Entreprise</h3>
+        <table>
+            <tr>
+                <th>Montant</th>
+                <th>Durée</th>
+                <th>Taux d’intérêt</th>
+                <th>Total à rembourser</th>
+            </tr>
+            <tr><td>1.000.000 FCFA</td><td>12 mois</td><td>150.000 FCFA</td><td>1.150.000 FCFA</td></tr>
+            <tr><td>2.000.000 FCFA</td><td>18 mois</td><td>280.000 FCFA</td><td>2.280.000 FCFA</td></tr>
+            <tr><td>3.000.000 FCFA</td><td>24 mois</td><td>420.000 FCFA</td><td>3.420.000 FCFA</td></tr>
+        </table>
+
+        <h3>Plans d’Investissement</h3>
+        <table>
+            <tr>
+                <th>Montant investi</th>
+                <th>Durée</th>
+                <th>Bénéfice estimé</th>
+                <th>Montant total retourné</th>
+            </tr>
+            <tr><td>50.000 FCFA</td><td>3 mois</td><td>10.000 FCFA</td><td>60.000 FCFA</td></tr>
+            <tr><td>100.000 FCFA</td><td>6 mois</td><td>25.000 FCFA</td><td>125.000 FCFA</td></tr>
+            <tr><td>300.000 FCFA</td><td>9 mois</td><td>60.000 FCFA</td><td>360.000 FCFA</td></tr>
+        </table>
+    </div>
+
+    <div class="box">
         <h2>Modalités d’obtention du crédit</h2>
         <ul>
             <li>Définir l’objectif du prêt</li>
             <li>Disposer d’une pièce d’identité valide</li>
             <li>Justifier un moyen de remboursement du crédit</li>
-            <li>Être capable de payer les frais obligatoires d’ouverture du compte d’assurance crédit</li>
+            <li>Être capable de payer les frais d’ouverture du compte d’assurance crédit</li>
         </ul>
 
         <h3>Frais d’ouverture du compte d’assurance prêt</h3>
         <ul>
-            <li>Crédit 50.000 FCFA à 80.000 FCFA : <strong>3.500 FCFA</strong></li>
-            <li>Crédit 100.000 FCFA à 400.000 FCFA : <strong>7.500 FCFA</strong></li>
-            <li>Crédit 500.000 FCFA à 1.000.000 FCFA : <strong>15.000 FCFA</strong></li>
+            <li>50.000 FCFA à 80.000 FCFA : <strong>3.500 FCFA</strong></li>
+            <li>100.000 FCFA à 400.000 FCFA : <strong>7.500 FCFA</strong></li>
+            <li>500.000 FCFA à 1.000.000 FCFA : <strong>15.000 FCFA</strong></li>
         </ul>
     </div>
 
     <div class="box" id="credit">
-    <h2>Demande de Crédit</h2>
+        <h2>Demande de Crédit</h2>
 
-    <p style="color:red"><strong>Important :</strong> Pour tout crédit supérieur à <strong>2.000.000 FCFA</strong>, un <strong>numéro de compte bancaire</strong> est obligatoire.</p>
+        <form onsubmit="envoyerWhatsApp(); return false;">
+            <input type="text" id="nom" placeholder="Nom complet" required>
+            <input type="tel" id="tel" placeholder="Numéro de téléphone" required>
+            <input type="number" id="montant" placeholder="Montant souhaité" required>
 
-    <form onsubmit="envoyerWhatsApp(); return false;">
-        <input type="text" id="nom" placeholder="Nom complet" required>
+            <select id="duree">
+                <option>3 mois</option>
+                <option>6 mois</option>
+                <option>12 mois</option>
+            </select>
 
-        <input type="text" id="compteMobile" placeholder="Numéro de compte mobile (MTN, Orange, etc.)" required>
+            <button type="submit">Envoyer la demande via WhatsApp</button>
+        </form>
+    </div>
 
-        <input type="number" id="montant" placeholder="Montant souhaité" required>
+    <script>
+    function envoyerWhatsApp() {
+        var nom = document.getElementById("nom").value;
+        var tel = document.getElementById("tel").value;
+        var montant = document.getElementById("montant").value;
+        var duree = document.getElementById("duree").value;
 
-        <input type="text" id="compteBanque" placeholder="Numéro de compte bancaire (obligatoire si montant > 2.000.000 FCFA)">
+        var message = 
+            "Demande de crédit:%0A" +
+            "Nom : " + nom + "%0A" +
+            "Téléphone : " + tel + "%0A" +
+            "Montant : " + montant + " FCFA%0A" +
+            "Durée : " + duree;
 
-        <input type="text" id="urgence" placeholder="Contact d’urgence" required>
-
-        <select id="situation" required>
-            <option value="">Situation matrimoniale</option>
-            <option>Marié(e)</option>
-            <option>Célibataire</option>
-            <option>Célibataire avec enfants</option>
-        </select>
-
-        <!-- 🔥 CADRE POUR IMAGES -->
-        <div style="
-            border: 2px dashed #1f8f4a;
-            padding: 15px;
-            margin-top: 20px;
-            border-radius: 10px;
-            background: #f0fff0;
-        ">
-            <h3 style="color:#1f8f4a;">Téléversement des documents</h3>
-
-            <p>Veuillez sélectionner les images suivantes :</p>
-
-            <label><strong>Photo de la CNI / Récepissé :</strong></label>
-            <input type="file" id="cni" accept="image/*" required>
-
-            <br><br>
-
-            <label><strong>Capture du versement des frais :</strong></label>
-            <input type="file" id="capture" accept="image/*" required>
-
-            <p style="color:red; margin-top:10px;">
-                ⚠️ Les images ne peuvent pas être envoyées automatiquement via WhatsApp.<br>
-                Après l’ouverture de WhatsApp, veuillez joindre les images manuellement.
-            </p>
-        </div>
-
-        <select id="duree">
-            <option>3 mois</option>
-            <option>6 mois</option>
-            <option>12 mois</option>
-        </select>
-
-        <button type="submit">Envoyer la demande via WhatsApp</button>
-    </form>
-</div>
-
-<script>
-function envoyerWhatsApp() {
-    var nom = document.getElementById("nom").value;
-    var compteMobile = document.getElementById("compteMobile").value;
-    var compteBanque = document.getElementById("compteBanque").value;
-    var urgence = document.getElementById("urgence").value;
-    var montant = document.getElementById("montant").value;
-    var duree = document.getElementById("duree").value;
-    var situation = document.getElementById("situation").value;
-
-    var message =
-        "Demande de crédit:%0A" +
-        "Nom : " + nom + "%0A" +
-        "Compte mobile : " + compteMobile + "%0A" +
-        "Montant demandé : " + montant + " FCFA%0A" +
-        "Durée : " + duree + "%0A" +
-        "Contact d'urgence : " + urgence + "%0A" +
-        "Situation matrimoniale : " + situation + "%0A";
-
-    if (montant > 2000000) {
-        message += "Compte bancaire (OBLIGATOIRE) : " + compteBanque + "%0A";
-    } else {
-        message += "Compte bancaire (facultatif) : " + compteBanque + "%0A";
+        var numero = "237672717004";
+        window.open("https://wa.me/" + numero + "?text=" + message, "_blank");
     }
-
-    message += "%0A📎 Veuillez joindre ensuite :" +
-               "%0A- Photo de votre CNI / Récepicé" +
-               "%0A- Capture du paiement des frais";
-
-    var numero = "237672717004";
-    window.open("https://wa.me/" + <script>
-function envoyerWhatsApp() {
-    var nom = document.getElementById("nom").value;
-    var compteMobile = document.getElementById("compteMobile").value;
-    var compteBanque = document.getElementById("compteBanque").value;
-    var urgence = document.getElementById("urgence").value;
-    var montant = document.getElementById("montant").value;
-    var duree = document.getElementById("duree").value;
-    var situation = document.getElementById("situation").value;
-
-    var message =
-        "Demande de crédit:%0A" +
-        "Nom : " + nom + "%0A" +
-        "Compte mobile : " + compteMobile + "%0A" +
-        "Montant demandé : " + montant + " FCFA%0A" +
-        "Durée : " + duree + "%0A" +
-        "Contact d'urgence : " + urgence + "%0A" +
-        "Situation matrimoniale : " + situation + "%0A";
-
-    if (montant > 2000000) {
-        message += "Compte bancaire (OBLIGATOIRE) : " + compteBanque + "%0A";
-    } else {
-        message += "Compte bancaire (facultatif) : " + compteBanque + "%0A";
-    }
-
-    message += "%0A📎 Veuillez joindre ensuite :" +
-               "%0A- Photo de votre CNI / Récepicé" +
-               "%0A- Capture du paiement des frais";
-
-    var numero = "237672717004";
-    window.open("https://wa.me/" + 672717004 + "?text=" + message, "_blank");
-}
-</script> + "?text=" + message, "_blank");
-}
-</script>
-
+    </script>
 
     <div class="box" id="contact">
         <h2>Contact</h2>
@@ -268,6 +240,7 @@ function envoyerWhatsApp() {
         <p>Email : contact@creditdafrik.com</p>
         <p>Adresse : Cameroun</p>
     </div>
+
 </div>
 
 <footer>
